--- a/index.html
+++ b/index.html
@@ -3,15 +3,48 @@
 <head>
     <meta charset="utf-8">
     <title>Reddit Clone</title>
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
-    <script type="text/javascript" src='app.js'></script>
+    <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-  <h1>{{view.test}}</h1>
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+
+  <div ng-controller='RedditController'>
+    <h1>{{view.test}}</h1>
+  </div>
+
+
+
+
+
+  <footer>
+    <div class="footer-copyright cyan">
+      <div class="container">
+      Made by <span class="orange-text text-lighten-2">Tim Pender</span>
+      </div>
+    </div>
+  </footer>
+
 
 </body>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
+  <script type="text/javascript" src='js/app.js'></script>
 
 
 </html>
