--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
-<body>
+<body ng-controller='RedditController'>
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
@@ -23,8 +23,17 @@
     </div>
   </nav>
 
-  <div ng-controller='RedditController'>
-    <h1>{{view.test}}</h1>
+
+  <div class='container'>
+    <div ng-repeat="post in view.posts">
+      <h3>{{post.title}} | {{post.votes}}</h3>
+      <h5>{{post.author}}</h5>
+      <img src='{{post.img}}' alt='{{post.title}}' />
+      <p>{{post.body}}</p>
+      <p>{{post.comments}}</p>
+      <p>{{post.date}}</p>
+
+    </div>
   </div>
 
 
@@ -38,7 +47,6 @@
       </div>
     </div>
   </footer>
-
 
 </body>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
