--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
       <h5>{{post.author}}</h5>
       <img src='{{post.img}}' alt='{{post.title}}' />
       <p>{{post.body}}</p>
-      <p>{{post.date}}</p>
-      <p>{{post.comments.length}} Comments </p>
-      <div class='comments' ng-repeat='comment in post.comments'>
+      <p>{{post.date | date:"MMM d, y 'at' h:mma"}}</p>
+      <p>Add Comment</p>
+      <p ng-click='showComments(post)'>{{post.comments.length}} Comments </p>
+      <div class='comments' ng-repeat='comment in post.comments' ng-show='post.commentsView'>
         <p><strong>{{comment.author}}:</strong> {{comment.commentBody}}</p>
       </div>
 
