--- a/index.html
+++ b/index.html
@@ -128,20 +128,27 @@
       </form>
     </div>
 
-
+    <!-- Post Content Block -->
     <div ng-repeat="post in view.posts | orderBy: view.sortBy | filter: searchText">
-      <h3>{{post.title}} <i class='material-icons' ng-click='upVote(post)'>thumb_up</i> | <i class='material-icons' ng-click='downVote(post)'>thumb_down</i> | <span ng-class='{greenText: post.votes > 0, redText: post.votes < 0}'>{{post.votes}}</span></h3>
-      <h5>{{post.author}}</h5>
-      <img src='{{post.img}}' alt='{{post.title}}' />
-      <p>{{post.body}}</p>
-      <p>{{post.date | date:"MMM d, y 'at' h:mma"}}</p>
+    <div class='card'>
+      <div class='row'>
+        <img class='col s12 m6 l4 card-image' src='{{post.img}}' alt='{{post.title}}' />
 
-      <p ng-click='showComments(post)'>{{post.comments.length}} Comments </p>
-      <div class='comments' ng-repeat='comment in post.comments' ng-show='post.commentsView'>
-        <p><strong>{{comment.commentAuthor}}:</strong> {{comment.commentBody}}</p>
+        <div class='col s12 m6 l8'>
+          <h3>{{post.title}} <i class='material-icons' ng-click='upVote(post)'>thumb_up</i> | <i class='material-icons' ng-click='downVote(post)'>thumb_down</i> | <span ng-class='{greenText: post.votes > 0, redText: post.votes < 0}'>{{post.votes}}</span></h3>
+          <h5>{{post.author}}</h5>
+          <p>{{post.body}}</p>
+          <p>{{post.date | date:"MMM d, y 'at' h:mma"}}</p>
+
+          <p ng-click='showComments(post)'>{{post.comments.length}} Comments </p>
+          <div class='comments' ng-repeat='comment in post.comments' ng-show='post.commentsView'>
+            <p><strong>{{comment.commentAuthor}}:</strong> {{comment.commentBody}}</p>
+          </div>
+          <p ng-click='showAddComment(post)'>Add Comment</p>
+        </div>
       </div>
 
-      <p ng-click='showAddComment(post)'>Add Comment</p>
+      <!-- Comment Section -->
 
       <div class="addComments" ng-show="post.addCommentView">
         <form name='commentForm' novalidate>
@@ -194,13 +201,10 @@
           <input class='waves-effect waves-light btn commentBtn' type="submit" value="Submit Comment" ng-click='submitComment(post, commentAuthor, commentBody)'/>
         </fieldset>
         </form>
-      </div>
-
+      </div> <!-- End add comments -->
+    </div>
     </div>
   </div>
-
-
-
 
 
   <footer>
